external/grok/src/lib/jp2/grok.h

typedef enum GRK_SUPPORTED_FILE_FMT
{
	GRK_UNK_FMT,
	GRK_J2K_FMT,
	GRK_JP2_FMT,
	GRK_PXM_FMT,
	GRK_PGX_FMT,
	GRK_PAM_FMT,
	GRK_BMP_FMT,
	GRK_TIF_FMT,
	GRK_RAW_FMT, 
	GRK_PNG_FMT,
	GRK_RAWL_FMT, 
	GRK_JPG_FMT
} GRK_SUPPORTED_FILE_FMT;
typedef enum _GRK_COLOR_SPACE
{
	GRK_CLRSPC_UNKNOWN = 0, 
	GRK_CLRSPC_SRGB = 2, 
	GRK_CLRSPC_GRAY = 3, 
	GRK_CLRSPC_SYCC = 4, 
	GRK_CLRSPC_EYCC = 5, 
	GRK_CLRSPC_CMYK = 6, 
	GRK_CLRSPC_DEFAULT_CIE = 7, 
	GRK_CLRSPC_CUSTOM_CIE = 8, 
	GRK_CLRSPC_ICC = 9 
} GRK_COLOR_SPACE;
typedef enum _GRK_CODEC_FORMAT
{
	GRK_CODEC_UNKNOWN = -1, 
	GRK_CODEC_J2K = 0, 
	GRK_CODEC_JP2 = 2 
} GRK_CODEC_FORMAT;
typedef enum GRK_TILE_CACHE_STRATEGY
{
	GRK_TILE_CACHE_NONE,
	GRK_TILE_CACHE_ALL,
} GRK_TILE_CACHE_STRATEGY;
typedef void (*grk_msg_callback)(const char* msg, void* client_data);
typedef struct _grk_object
{
	void* wrapper;
} grk_object;
typedef struct grk_color
{
	uint8_t* icc_profile_buf;
	uint32_t icc_profile_len;
	grk_channel_definition* channel_definition;
	grk_palette_data* palette;
	bool has_colour_specification_box;
} grk_color;
typedef struct grk_asoc
{
	uint32_t level; 
	const char* label;
	uint8_t* xml;
	uint32_t xml_len;
} grk_asoc;
typedef struct _grk_header_info
{
	uint32_t cblockw_init;
	uint32_t cblockh_init;
	bool irreversible;
	uint32_t mct;
	uint16_t rsiz;
	uint32_t numresolutions;
	uint8_t csty;
	uint8_t cblk_sty;
	uint32_t prcw_init[GRK_J2K_MAXRLVLS];
	uint32_t prch_init[GRK_J2K_MAXRLVLS];
	uint32_t tx0;
	uint32_t ty0;
	uint32_t t_width;
	uint32_t t_height;
	uint32_t t_grid_width;
	uint32_t t_grid_height;
	uint16_t numlayers;
	uint8_t* xml_data;
	size_t xml_data_len;
	size_t num_comments;
	char* comment[GRK_NUM_COMMENTS_SUPPORTED];
	uint16_t comment_len[GRK_NUM_COMMENTS_SUPPORTED];
	bool isBinaryComment[GRK_NUM_COMMENTS_SUPPORTED];
	grk_asoc asocs[GRK_NUM_ASOC_BOXES_SUPPORTED];
	uint32_t num_asocs;
} grk_header_info;
typedef struct _grk_dparameters
{
	uint8_t cp_reduce;
	uint16_t cp_layer;
	char infile[GRK_PATH_LEN];
	char outfile[GRK_PATH_LEN];
	GRK_SUPPORTED_FILE_FMT decod_format;
	GRK_SUPPORTED_FILE_FMT cod_format;
	uint32_t DA_x0;
	uint32_t DA_x1;
	uint32_t DA_y0;
	uint32_t DA_y1;
	bool m_verbose;
	uint16_t tileIndex;
	uint32_t nb_tile_to_decompress;
	uint32_t flags;
	GRK_TILE_CACHE_STRATEGY tileCacheStrategy;
} grk_dparameters;
typedef grk_object grk_codec;
typedef size_t (*grk_stream_read_fn)(void* buffer, size_t numBytes, void* user_data);
typedef size_t (*grk_stream_write_fn)(void* buffer, size_t numBytes, void* user_data);
typedef bool (*grk_stream_seek_fn)(uint64_t numBytes, void* user_data);
typedef void (*grk_stream_free_user_data_fn)(void* user_data);
typedef grk_object grk_stream;
typedef enum GRK_COMPONENT_TYPE
{
	GRK_COMPONENT_TYPE_COLOUR = 0,
	GRK_COMPONENT_TYPE_OPACITY = 1,
	GRK_COMPONENT_TYPE_PREMULTIPLIED_OPACITY = 2,
	GRK_COMPONENT_TYPE_UNSPECIFIED = 65535U
} GRK_COMPONENT_TYPE;
typedef enum GRK_COMPONENT_ASSOC
{
	GRK_COMPONENT_ASSOC_WHOLE_IMAGE = 0,
	GRK_COMPONENT_ASSOC_COLOUR_1 = 1,
	GRK_COMPONENT_ASSOC_COLOUR_2 = 2,
	GRK_COMPONENT_ASSOC_COLOUR_3 = 3,
	GRK_COMPONENT_ASSOC_UNASSOCIATED = 65535U
} GRK_COMPONENT_ASSOC;
typedef struct _grk_image_comp
{
	grk_object obj;
	uint32_t dx;
	uint32_t dy;
	uint32_t w;
	uint32_t stride;
	uint32_t h;
	uint32_t x0;
	uint32_t y0;
	uint16_t Xcrg, Ycrg;
	uint8_t prec;
	bool sgnd;
	int32_t* data;
	GRK_COMPONENT_TYPE type;
	GRK_COMPONENT_ASSOC association;
} grk_image_comp;
typedef struct _grk_image_meta
{
	grk_object obj;
	grk_color color;
	uint8_t* iptc_buf;
	size_t iptc_len;
	uint8_t* xmp_buf;
	size_t xmp_len;
} grk_image_meta;
typedef struct _grk_image
{
	grk_object obj;
	uint32_t x0;
	uint32_t y0;
	uint32_t x1;
	uint32_t y1;
	uint16_t numcomps;
	GRK_COLOR_SPACE color_space;
	bool color_applied;
	bool has_capture_resolution;
	double capture_resolution[2];
	bool has_display_resolution;
	double display_resolution[2];
	grk_image_meta* meta;
	grk_image_comp* comps;
} grk_image;
typedef struct _grk_image_comptparm
{
	uint32_t dx;
	uint32_t dy;
	uint32_t w;
	uint32_t stride;
	uint32_t h;
	uint32_t x0;
	uint32_t y0;
	uint8_t prec;
	bool sgnd;
} grk_image_cmptparm;
typedef struct _grk_plugin_code_block
{
	uint32_t x0, y0, x1, y1;
	unsigned int* contextStream;
	uint32_t numPix;
	uint8_t* compressedData;
	uint32_t compressedDataLength;
	uint8_t numBitPlanes;
	size_t numPasses;
	grk_plugin_pass passes[67];
	unsigned int sortedIndex;
} grk_plugin_code_block;
typedef struct _grk_plugin_precinct
{
	uint64_t numBlocks;
	grk_plugin_code_block** blocks;
} grk_plugin_precinct;
typedef struct _grk_plugin_band
{
	uint8_t orientation;
	uint64_t numPrecincts;
	grk_plugin_precinct** precincts;
	float stepsize;
} grk_plugin_band;
typedef struct _grk_plugin_resolution
{
	size_t level;
	size_t numBands;
	grk_plugin_band** band;
} grk_plugin_resolution;
typedef struct grk_plugin_tile_component
{
	size_t numResolutions;
	grk_plugin_resolution** resolutions;
} grk_plugin_tile_component;
typedef struct _grk_plugin_tile
{
	uint32_t decompress_flags;
	size_t numComponents;
	grk_plugin_tile_component** tileComponents;
} grk_plugin_tile;
GRK_API const char* GRK_CALLCONV grk_version(void);
GRK_API bool GRK_CALLCONV grk_initialize(const char* pluginPath, uint32_t numthreads);
GRK_API void GRK_CALLCONV grk_deinitialize();
GRK_API void GRK_CALLCONV grk_object_ref(grk_object* obj);
GRK_API void GRK_CALLCONV grk_object_unref(grk_object* obj);
GRK_API bool GRK_CALLCONV grk_set_info_handler(grk_msg_callback p_callback, void* user_data);
GRK_API bool GRK_CALLCONV grk_set_warning_handler(grk_msg_callback p_callback, void* user_data);
GRK_API bool GRK_CALLCONV grk_set_error_handler(grk_msg_callback p_callback, void* user_data);
GRK_API grk_image* GRK_CALLCONV grk_image_new(uint16_t numcmpts, grk_image_cmptparm* cmptparms,
											  GRK_COLOR_SPACE clrspc, bool allocData);
GRK_API grk_image_meta* GRK_CALLCONV grk_image_meta_new(void);
GRK_API void GRK_CALLCONV grk_image_all_components_data_free(grk_image* image);
GRK_API void GRK_CALLCONV grk_image_single_component_data_free(grk_image_comp* image);
GRK_API grk_stream* GRK_CALLCONV grk_stream_new(size_t buffer_size, bool is_input);
GRK_API void GRK_CALLCONV grk_stream_set_read_function(grk_stream* stream,
													   grk_stream_read_fn p_function);
GRK_API void GRK_CALLCONV grk_stream_set_write_function(grk_stream* stream,
														grk_stream_write_fn p_function);
GRK_API void GRK_CALLCONV grk_stream_set_seek_function(grk_stream* stream,
													   grk_stream_seek_fn p_function);
GRK_API void GRK_CALLCONV grk_stream_set_user_data(grk_stream* stream, void* data,
												   grk_stream_free_user_data_fn p_function);
GRK_API void GRK_CALLCONV grk_stream_set_user_data_length(grk_stream* stream, uint64_t data_length);
GRK_API grk_stream* GRK_CALLCONV grk_stream_create_file_stream(const char* fname,
															   size_t buffer_size,
															   bool is_read_stream);
GRK_API grk_stream* GRK_CALLCONV grk_stream_create_mem_stream(uint8_t* buf, size_t buffer_len,
															  bool ownsBuffer, bool is_read_stream);
GRK_API size_t GRK_CALLCONV grk_stream_get_write_mem_stream_length(grk_stream* stream);
GRK_API grk_stream* GRK_CALLCONV grk_stream_create_mapped_file_stream(const char* fname,
																	  bool read_stream);
GRK_API grk_codec* GRK_CALLCONV grk_decompress_create(GRK_CODEC_FORMAT format, grk_stream* stream);
GRK_API void GRK_CALLCONV grk_decompress_set_default_params(grk_dparameters* parameters);
GRK_API bool GRK_CALLCONV grk_decompress_init(grk_codec* codec, grk_dparameters* parameters);
GRK_API bool GRK_CALLCONV grk_decompress_read_header(grk_codec* codec,
													 grk_header_info* header_info);
GRK_API grk_image* GRK_CALLCONV grk_decompress_get_tile_image(grk_codec* codec, uint16_t tileIndex);
GRK_API grk_image* GRK_CALLCONV grk_decompress_get_composited_image(grk_codec* codec);
GRK_API bool GRK_CALLCONV grk_decompress_set_window(grk_codec* codec, uint32_t start_x,
													uint32_t start_y, uint32_t end_x,
													uint32_t end_y);
GRK_API bool GRK_CALLCONV grk_decompress(grk_codec* p_decompressor, grk_plugin_tile* tile);