src/lib.rs

#[doc = " Plugin precinct"]
pub type grk_plugin_precinct = _grk_plugin_precinct;
#[doc = " Plugin band"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_plugin_band {
    pub orientation: u8,
    pub numPrecincts: u64,
    pub precincts: *mut *mut grk_plugin_precinct,
    pub stepsize: f32,
}
#[doc = " Plugin band"]
pub type grk_plugin_band = _grk_plugin_band;
#[doc = " Plugin resolution"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_plugin_resolution {
    pub level: usize,
    pub numBands: usize,
    pub band: *mut *mut grk_plugin_band,
}
#[doc = " Plugin resolution"]
pub type grk_plugin_resolution = _grk_plugin_resolution;
#[doc = " Plugin tile component"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct grk_plugin_tile_component {
    pub numResolutions: usize,
    pub resolutions: *mut *mut grk_plugin_resolution,
}
#[doc = " Plugin tile"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_plugin_tile {
    pub decompress_flags: u32,
    pub numComponents: usize,
    pub tileComponents: *mut *mut grk_plugin_tile_component,
}
#[doc = " Plugin tile"]
pub type grk_plugin_tile = _grk_plugin_tile;
extern "C" {
    #[doc = " library version"]
    pub fn grk_version() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Initialize library"]
    #[doc = ""]
    #[doc = " @param pluginPath \tpath to plugin"]
    #[doc = " @param numthreads \tnumber of threads to use for compress/decompress"]
    pub fn grk_initialize(pluginPath: *const ::std::os::raw::c_char, numthreads: u32) -> bool;
}
extern "C" {
    #[doc = " De-initialize library"]
    pub fn grk_deinitialize();
}
extern "C" {
    #[doc = " Increment ref count"]
    pub fn grk_object_ref(obj: *mut grk_object);
}
extern "C" {
    pub fn grk_object_unref(obj: *mut grk_object);
}
extern "C" {
    #[doc = " Set info handler"]
    #[doc = ""]
    #[doc = " @param p_callback    the callback function which will be used"]
    #[doc = " @param user_data   client object where will be returned the message"]
    pub fn grk_set_info_handler(
        p_callback: grk_msg_callback,
        user_data: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    #[doc = " Set warning handler"]
    #[doc = ""]
    #[doc = " @param p_callback    the callback function which will be used"]
    #[doc = " @param user_data   client object where will be returned the message"]
    pub fn grk_set_warning_handler(
        p_callback: grk_msg_callback,
        user_data: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    #[doc = " Set error handler"]
    #[doc = ""]
    #[doc = " @param p_callback    the callback function which will be used"]
    #[doc = " @param user_data   client object where will be returned the message"]
    pub fn grk_set_error_handler(
        p_callback: grk_msg_callback,
        user_data: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    #[doc = " Create image"]
    #[doc = ""]
    #[doc = " @param numcmpts      number of components"]
    #[doc = " @param cmptparms     component parameters"]
    #[doc = " @param clrspc        image color space"]
    #[doc = " @param allocData\t\ttrue if data is to be allocated, otherwise false"]
    #[doc = ""]
    #[doc = " @return returns      a new image if successful, otherwise nullptr"]
    pub fn grk_image_new(
        numcmpts: u16,
        cmptparms: *mut grk_image_cmptparm,
        clrspc: GRK_COLOR_SPACE,
        allocData: bool,
    ) -> *mut grk_image;
}
extern "C" {
    pub fn grk_image_meta_new() -> *mut grk_image_meta;
}
extern "C" {
    #[doc = " Deallocate all component data for an image"]
    #[doc = ""]
    #[doc = " @param image         image"]
    pub fn grk_image_all_components_data_free(image: *mut grk_image);
}
extern "C" {
    #[doc = " Deallocate data for single image component"]
    #[doc = ""]
    #[doc = " @param image         image"]
    pub fn grk_image_single_component_data_free(image: *mut grk_image_comp);
}
extern "C" {
    #[doc = " Create an abstract stream. This function does nothing except"]
    #[doc = " allocate memory and initialize abstract stream."]
    #[doc = ""]
    #[doc = " @param\tbuffer_size   size of stream's double-buffer"]
    #[doc = " @param\tis_input\t  if set to true then the stream will be"]
    #[doc = "  an input stream, an output stream else."]
    #[doc = ""]
    #[doc = " @return\tstream object."]
    pub fn grk_stream_new(buffer_size: usize, is_input: bool) -> *mut grk_stream;
}
extern "C" {
    #[doc = " Set the given function to be used as a read function."]
    #[doc = ""]
    #[doc = " @param\t\tstream\tthe stream to modify"]
    #[doc = " @param\t\tp_function\tthe function to use a read function."]
    pub fn grk_stream_set_read_function(stream: *mut grk_stream, p_function: grk_stream_read_fn);
}
extern "C" {
    #[doc = " Set the given function to be used as a write function."]
    #[doc = ""]
    #[doc = " @param\t\tstream\tthe stream to modify"]
    #[doc = " @param\t\tp_function\tthe function to use a write function."]
    pub fn grk_stream_set_write_function(stream: *mut grk_stream, p_function: grk_stream_write_fn);
}
extern "C" {
    #[doc = " Set the given function to be used as a seek function, the stream is then seekable."]
    #[doc = ""]
    #[doc = " @param\t\tstream\tthe stream to modify"]
    #[doc = " @param\t\tp_function\tthe function to use a skip function."]
    pub fn grk_stream_set_seek_function(stream: *mut grk_stream, p_function: grk_stream_seek_fn);
}
extern "C" {
    #[doc = " Set the given data to be used as a user data for the stream."]
    #[doc = ""]
    #[doc = " @param\t\tstream\tthe stream to modify"]
    #[doc = " @param\t\tdata\t\tthe data to set."]
    #[doc = " @param\t\tp_function\tthe function to free data when grk_object_unref() is called."]
    pub fn grk_stream_set_user_data(
        stream: *mut grk_stream,
        data: *mut ::std::os::raw::c_void,
        p_function: grk_stream_free_user_data_fn,
    );
}
extern "C" {
    #[doc = " Set the length of the user data for the stream."]
    #[doc = ""]
    #[doc = " @param stream    the stream to modify"]
    #[doc = " @param data_length length of the user_data."]
    pub fn grk_stream_set_user_data_length(stream: *mut grk_stream, data_length: u64);
}
extern "C" {
    #[doc = " Create stream from a file identified with its filename with a specific buffer size"]
    #[doc = ""]
    #[doc = " @param fname             the filename of the file to stream"]
    #[doc = " @param buffer_size     size of the chunk used to stream"]
    #[doc = " @param is_read_stream  whether the stream is a read stream (true) or not (false)"]
    pub fn grk_stream_create_file_stream(
        fname: *const ::std::os::raw::c_char,
        buffer_size: usize,
        is_read_stream: bool,
    ) -> *mut grk_stream;
}
extern "C" {
    #[doc = " Create stream from buffer"]
    #[doc = ""]
    #[doc = " @param buf\t\t\tbuffer"]
    #[doc = " @param buffer_len    length of buffer"]
    #[doc = " @param ownsBuffer\tif true, library will delete[] buffer. Otherwise, it is the caller's"]
    #[doc = "\t\t\t\t\t\tresponsibility to delete the buffer"]
    #[doc = " @param is_read_stream  whether the stream is a read stream (true) or not (false)"]
    pub fn grk_stream_create_mem_stream(
        buf: *mut u8,
        buffer_len: usize,
        ownsBuffer: bool,
        is_read_stream: bool,
    ) -> *mut grk_stream;
}
extern "C" {
    #[doc = " Get length of memory stream"]
    #[doc = ""]
    #[doc = " @param stream memory stream"]
    pub fn grk_stream_get_write_mem_stream_length(stream: *mut grk_stream) -> usize;
}
extern "C" {
    #[doc = " Create mapped file stream"]
    #[doc = ""]
    #[doc = " @param fname\t\t\tfile name"]
    #[doc = " @param read_stream \ttrue if this is a read stream, otherwise false"]
    pub fn grk_stream_create_mapped_file_stream(
        fname: *const ::std::os::raw::c_char,
        read_stream: bool,
    ) -> *mut grk_stream;
}
extern "C" {
    #[doc = " Create J2K/JP2 decompression structure"]
    #[doc = ""]
    #[doc = " @param format \t\tJPEG 2000 format"]
    #[doc = " @param\tstream\tJPEG 2000 stream."]
    #[doc = ""]
    #[doc = " @return a handle to a decompressor if successful, otherwise nullptr"]
    pub fn grk_decompress_create(
        format: GRK_CODEC_FORMAT,
        stream: *mut grk_stream,
    ) -> *mut grk_codec;
}
extern "C" {
    #[doc = " Initialize decompress parameters with default values"]
    #[doc = ""]
    #[doc = " @param parameters decompression parameters"]
    pub fn grk_decompress_set_default_params(parameters: *mut grk_dparameters);
}
extern "C" {
    #[doc = " Set up the decompressor with decompress parameters"]
    #[doc = ""]
    #[doc = " @param codec \t\tdecompressor handler"]
    #[doc = " @param parameters \tdecompression parameters"]
    #[doc = ""]
    #[doc = " @return true\t\t\tif the decompressor is correctly set"]
    pub fn grk_decompress_init(codec: *mut grk_codec, parameters: *mut grk_dparameters) -> bool;
}
extern "C" {
    #[doc = " Decompress JPEG 2000 header"]
    #[doc = ""]
    #[doc = " @param\tcodec\t\t\t\tJPEG 2000 code stream to read."]
    #[doc = " @param\theader_info\t\t\tinformation read from JPEG 2000 header."]
    #[doc = " @param\timage\t\t\t\tthe image structure initialized with the characteristics"]
    #[doc = "\t\t\t\t\t\t\t\tof encoded image."]
    #[doc = " @return true\t\t\t\t\tif the main header of the code stream and the JP2 header"]
    #[doc = " \t\t\t\t\t\t\t \tis correctly read."]
    pub fn grk_decompress_read_header(
        codec: *mut grk_codec,
        header_info: *mut grk_header_info,
    ) -> bool;
}
extern "C" {
    #[doc = " Get decompressed tile image"]
    #[doc = ""]
    #[doc = " @param\tcodec\t\t\t\tJPEG 2000 code stream to read."]
    #[doc = " @param\ttileIndex\t\t\ttile index"]
    #[doc = ""]
    #[doc = " @return pointer to decompressed image"]
    pub fn grk_decompress_get_tile_image(codec: *mut grk_codec, tileIndex: u16) -> *mut grk_image;
}
extern "C" {
    #[doc = " Get decompressed composite image"]
    #[doc = ""]
    #[doc = " @param\tcodec\t\t\t\tJPEG 2000 code stream to read."]
    #[doc = ""]
    #[doc = " @return pointer to decompressed image"]
    pub fn grk_decompress_get_composited_image(codec: *mut grk_codec) -> *mut grk_image;
}
extern "C" {
    #[doc = " Set the given area to be decompressed. This function should be called"]
    #[doc = "  right after grk_decompress_read_header is called, and before any tile header is read."]
    #[doc = ""]
    #[doc = " @param\tcodec\t\t\tJPEG 2000 code stream."]
    #[doc = " @param\tstart_x\t\t    left position of the rectangle to decompress (in image coordinates)."]
    #[doc = " @param\tend_x\t\t\tthe right position of the rectangle to decompress (in image"]
    #[doc = " coordinates)."]
    #[doc = " @param\tstart_y\t\t    up position of the rectangle to decompress (in image coordinates)."]
    #[doc = " @param\tend_y\t\t\tbottom position of the rectangle to decompress (in image coordinates)."]
    #[doc = ""]
    #[doc = " @return\ttrue\t\t\tif the area could be set."]
    pub fn grk_decompress_set_window(
        codec: *mut grk_codec,
        start_x: u32,
        start_y: u32,
        end_x: u32,
        end_y: u32,
    ) -> bool;
}
extern "C" {
    #[doc = " Decompress image from a JPEG 2000 code stream"]
    #[doc = ""]
    #[doc = " @param p_decompressor \tdecompressor handle"]
    #[doc = " @param tile\t\t\t \ttile struct from plugin"]
    #[doc = " @return \t\t\t\t\ttrue if successful, otherwise false"]
    pub fn grk_decompress(p_decompressor: *mut grk_codec, tile: *mut grk_plugin_tile) -> bool;
}
